Updating UrlSanitizer to use URL instead of URI when appending paths (#7669)